--- a/WebApplication1/WebApplication1/Front/Client/menu-voyageurs.html
+++ b/WebApplication1/WebApplication1/Front/Client/menu-voyageurs.html
@@ -53,7 +53,7 @@
             </div>
         </div>
     </nav>
-    
+
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
@@ -62,9 +62,14 @@
                     <div class="panel-footer" style="text-align:center">Créer Voyageur</div>
                 </div>
             </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Client/afficher-clients.html" class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Afficher les voyageurs</div>
+                </div>
+            </div>
         </div>
     </div>
-
 
 </body>
 </html>
