--- a/WebApplication1/WebApplication1/Front/Destination/menu-destinations.html
+++ b/WebApplication1/WebApplication1/Front/Destination/menu-destinations.html
@@ -53,8 +53,15 @@
                     <div class="panel-footer" style="text-align:center">Créer Destination</div>
                 </div>
             </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Destination/afficher-destinations.html" class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Afficher les destinations</div>
+                </div>
+            </div>
         </div>
     </div>
+
 
 
 </body>
