--- a/WebApplication1/WebApplication1/Front/Assurance/menu-assurances.html
+++ b/WebApplication1/WebApplication1/Front/Assurance/menu-assurances.html
@@ -58,8 +58,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <!--ADD HYPERTEXT WHEN AVAILABLE-->
-                    <a href="#" div class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <a href="http://localhost:63574/Front/Assurance/afficher-assurances.html" div class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Assurances disponibles</div>
                 </div>
             </div>
