--- a/WebApplication1/WebApplication1/Front/Voyage/menu-voyages.html
+++ b/WebApplication1/WebApplication1/Front/Voyage/menu-voyages.html
@@ -62,8 +62,13 @@
                     <div class="panel-footer" style="text-align:center">Créer Voyage</div>
                 </div>
             </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Voyage/afficher-voyages.html" class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Afficher les voyages</div>
+                </div>
+            </div>
         </div>
-    </div>
 
 
 </body>
