--- a/WebApplication1/WebApplication1/Front/Dossier/creer-dossier.html
+++ b/WebApplication1/WebApplication1/Front/Dossier/creer-dossier.html
@@ -63,6 +63,13 @@
             </div>
 
             <div class="form-group">
+                <label class="col-sm-2 control-label">Participant</label>
+                <div class="col-sm-10">
+                    <select class="form-control" id="inputIdParticipant"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
                 <label class="col-sm-2 control-label">Voyage</label>
                 <div class="col-sm-10">
                     <select class="form-control" id="inputIdVoyage"></select>
@@ -87,9 +94,9 @@
             </div>
 
             <div class="form-group">
-                <label class="col-sm-2 control-label">Prix Total</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" id="inputPrix">
+                <label class="col-sm-2 control-label">Numéro Carte Bancaire</label>
+                <div class="col-sm-4">
+                    <input type="number" class="form-control" id="inputCb">
                 </div>
             </div>
 
@@ -99,7 +106,6 @@
                     <label type="checkbox" id="inputAssurance"></label>
                 </div>
             </div>
-
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
@@ -129,12 +135,23 @@
                 }
             });
 
+            $.get("http://localhost:63574/api/participants/", function (data) {
+                //console.log(data);
+                for (let item of data) {
+                    $("#inputIdParticipant").append(`<option value="${item.IdParticipant}">${item.Nom}</option>`)
+                }
+            });
+
             $("form").submit(function (ev) {
                 let obj = {
-                    IdClient: $("#inputIdClient").val(),
-                    NombreParticipants: $("#inputNbParticipant").val(),
+                    IdClient: $("#inputIdClient").val(),    
+                    IdVoyage: $("#inputIdVoyage").val(),    
+                    IdParticipant: $("#inputIdParticipant").val(),    
+                    NombreParticipant: $("#inputNbParticipant").val(),    
+                    EtatDossierReservation: $("#inputEtatDossierReservation").val(),
                     PrixTotal: $("#inputPrix").val(),
-
+                    Assurance: $("#inputAssurance").val(),
+                    NumeroCarteBancaire: $("#inputCb").val(),
                 };
 
                 $.ajax({
