--- a/WebApplication1/WebApplication1/Front/Client/chercher-client.html
+++ b/WebApplication1/WebApplication1/Front/Client/chercher-client.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>BoVoyageTrouverAgence</title>
+    <title>BoVoyageTrouverVoyageur</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
         <div class="container text-center">
             <h1 style="color: chocolate">BoVoyage</h1>
             <div class="col-md-12">
-                <p style="color: mediumturquoise">Trouver une agence</p>
+                <p style="color: mediumturquoise">Trouver un Voyageur</p>
             </div>
         </div>
     </div>
@@ -40,9 +40,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="http://localhost:63574/Front/Agence/menu-agences.html">Agences</a></li>
-                    <li><a href="http://localhost:63574/Front/Agence/creer-agence.html">Créer</a></li>
-                    <li><a href="http://localhost:63574/Front/Agence/afficher-agences.html">Afficher</a></li>
+                    <li class="active"><a href="http://localhost:63574/Front/Client/menu-voyageurs.html">Voyageurs</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/creer-client.html">Créer</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/afficher-clients.html">Afficher</a></li>
                 </ul>
             </div>
         </div>
@@ -53,8 +53,8 @@
             <div class="col-md-6">
                 <form class="form-horizontal" role="form">
                     <div class="form-group">
-                        <label class="col-sm-2 control-label" for="inputName">Nom</label>
-                        <div class="col-sm-10">
+                        <label class="col-sm-4 control-label" for="inputName">Nom client</label>
+                        <div class="col-sm-8">
                             <input type="text" class="form-control" id="inputName" placeholder="Nom...">
                         </div>
                     </div>
@@ -83,12 +83,12 @@
             $("form").submit(function (ev) {
 
                 $.ajax({
-                    url: "http://localhost:63574/api/agencevoyages/" + $("#inputName").val(),
+                    url: "http://localhost:63574/api/clients/" + $("#inputName").val(),
                     method: 'GET',
                     success: function (data) {
                         let ul = $('#resultat');
                         for (let item of data) {
-                            ul.append(`<li>ID: ${item.IdAgenceVoyage} ${item.NomAgence}</li>`);
+                            ul.append(`<li>ID: ${item.IdClient} - CLIENT: ${item.Nom} ${item.Prenom} - TEL: ${item.Telephone}</li>`);
                         }
                     },
                     error: function (message) {
