--- a/WebApplication1/WebApplication1/Front/Client/creer-client.html
+++ b/WebApplication1/WebApplication1/Front/Client/creer-client.html
@@ -43,7 +43,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/Client/menu-voyageurs.html">Voyageurs</a></li>
                     <li><a href="http://localhost:63574/Front/Client/afficher-clients.html">Afficher</a></li>
-                    <li><a href="#">Rechercher</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/chercher-client.html">Rechercher</a></li>
                     <li><a href="#">Modifier</a></li>
                 </ul>
             </div>
