--- a/WebApplication1/WebApplication1/Front/Client/menu-voyageurs.html
+++ b/WebApplication1/WebApplication1/Front/Client/menu-voyageurs.html
@@ -59,13 +59,19 @@
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Client/creer-client.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Créer Voyageur</div>
+                    <div class="panel-footer" style="text-align:center">Créer un voyageur</div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Client/afficher-clients.html" class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Afficher les voyageurs</div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Client/chercher-client.html" class="panel-body"><img src="SearchLogo.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Rechercher un voyageur</div>
                 </div>
             </div>
         </div>
