--- a/WebApplication1/WebApplication1/Front/Dossier/creer-dossier.html
+++ b/WebApplication1/WebApplication1/Front/Dossier/creer-dossier.html
@@ -101,9 +101,12 @@
             </div>
 
             <div class="form-group">
-                <label class="col-sm-2 control-label">Assurance</label>
-                <div class="col-sm-10">
-                    <label type="checkbox" id="inputAssurance"></label>
+                <div class="col-sm-offset-2 col-sm-10">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" id="inputAssurance">Assurance
+                        </label>
+                    </div>
                 </div>
             </div>
 
