Methode Get Destination + Voyage

--- a/WebApplication1/WebApplication1/Front/Voyage/creer-voyage.html
+++ b/WebApplication1/WebApplication1/Front/Voyage/creer-voyage.html
@@ -42,8 +42,8 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/Voyage/menu-voyages.html">Voyages</a></li>
-                    <li><a href="#">Consulter</a></li>
-                    <li><a href="#">Consulter</a></li>
+                    <li><a href="http://localhost:63574/Front/Voyage/creer-voyage.html">Créer</a></li>
+                    <li><a href="http://localhost:63574/Front/Voyage/chercher-voyage.html">Chercher</a></li>
                     <li><a href="#">Consulter</a></li>
                 </ul>
             </div>
