--- a/WebApplication1/WebApplication1/Front/Destination/afficher-destinations.html
+++ b/WebApplication1/WebApplication1/Front/Destination/afficher-destinations.html
@@ -42,7 +42,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
                     <li><a href="http://localhost:63574/Front/Destination/creer-destinations.html">Créer</a></li>
-                    <!--<li><a href="http://localhost:63574/Front/Destination/chercher-destinations.html">Chercher</a></li>-->
+                    <li><a href="http://localhost:63574/Front/Destination/chercher-destination.html">Chercher</a></li>
                 </ul>
             </div>
         </div>
