--- a/WebApplication1/WebApplication1/Front/Destination/chercher-destination.html
+++ b/WebApplication1/WebApplication1/Front/Destination/chercher-destination.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>BoVoyageAfficherVoyages</title>
+    <title>BoVoyageTrouverDestination</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
         <div class="container text-center">
             <h1 style="color: chocolate">BoVoyage</h1>
             <div class="col-md-12">
-                <p style="color: mediumturquoise">Les voyages</p>
+                <p style="color: mediumturquoise">Trouver une destination</p>
             </div>
         </div>
     </div>
@@ -40,9 +40,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="http://localhost:63574/Front/Voyage/menu-voyages.html">Voyages</a></li>
-                    <li><a href="http://localhost:63574/Front/Voyage/creer-voyage.html">Créer</a></li>
-                    <li><a href="http://localhost:63574/Front/Voyage/chercher-voyage.html">Chercher</a></li>
+                    <li class="active"><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/creer-destination.html">Créer</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/afficher-destinations.html">Afficher</a></li>
                 </ul>
             </div>
         </div>
@@ -51,10 +51,26 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label" for="inputPays">Pays</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputPays" placeholder="Pays de destination...">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-default">Rechercher</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-6">
                 <ul id="resultat"></ul>
             </div>
         </div>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -63,26 +79,24 @@
 
     <script>
 
-        $(document).ready(function (ev) {
-            {
+        $(document).ready(function () {
+            $("form").submit(function (ev) {
+
                 $.ajax({
-                    url: "http://localhost:63574/api/voyages/",
+                    url: "http://localhost:63574/api/destinations/" + $("#inputPays").val(),
                     method: 'GET',
-                    dataType: 'json',
                     success: function (data) {
                         let ul = $('#resultat');
                         for (let item of data) {
-                            ul.append(`<li>Voyage ${item.IdVoyage} - Du ${item.DateAller} au ${item.DateRetour} pour ${item.PlacesDisponibles} personnes à ${item.IdDestination}: ${item.TarifToutCompris}euros</li>`);
+                            ul.append(`<li>Destination ${item.IdDestination} - ${item.Region} ${item.Pays}: ${item.Description}</li>`);
                         }
                     },
                     error: function (message) {
                         alert(message);
                     }
                 });
-
-                //ev.preventDefault();
-
-            }
+                ev.preventDefault();
+            })
         });
     </script>
 
