--- a/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
+++ b/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
@@ -41,9 +41,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="http://localhost:63574/Front/menu-destinations.html">Destinations</a></li>
-                    <li><a href="#">Consulter</a></li>
-                    <li><a href="#">Consulter</a></li>
+                    <li class="active"><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/afficher-destinations.html">Afficher</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/chercher-destination.html">Chercher</a></li>
                     <li><a href="#">Consulter</a></li>
                 </ul>
             </div>
