--- a/WebApplication1/WebApplication1/Front/Voyage/menu-voyages.html
+++ b/WebApplication1/WebApplication1/Front/Voyage/menu-voyages.html
@@ -68,7 +68,14 @@
                     <div class="panel-footer" style="text-align:center">Afficher les voyages</div>
                 </div>
             </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Agence/chercher-voyage.html" class="panel-body"><img src="SearchLogo.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Rechercher un voyage</div>
+                </div>
+            </div>
         </div>
+    </div>
 
 
 </body>
