--- a/WebApplication1/WebApplication1/Front/Agence/menu-agences.html
+++ b/WebApplication1/WebApplication1/Front/Agence/menu-agences.html
@@ -56,22 +56,28 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4" style="margin: 10px">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Agence/creer-agence.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Créer Agence</div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4" style="margin: 10px">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Agence/afficher-agences.html" class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Afficher les agences</div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4" style="margin: 10px">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Agence/chercher-agence.html" class="panel-body"><img src="SearchLogo.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Rechercher une agence</div>
+                </div>
+            </div>
+            <div class="col-sm-4" style="margin: 10px">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Agence/supprimer-agence.html" class="panel-body"><img src="DeleteSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Supprimer une agence</div>
                 </div>
             </div>
         </div>
