--- a/WebApplication1/WebApplication1/Front/Client/chercher-client.html
+++ b/WebApplication1/WebApplication1/Front/Client/chercher-client.html
@@ -43,6 +43,7 @@
                     <li class="active"><a href="http://localhost:63574/Front/Client/menu-voyageurs.html">Voyageurs</a></li>
                     <li><a href="http://localhost:63574/Front/Client/creer-client.html">Créer</a></li>
                     <li><a href="http://localhost:63574/Front/Client/afficher-clients.html">Afficher</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/supprimer-client.html">Supprimer</a></li>
                 </ul>
             </div>
         </div>
