--- a/WebApplication1/WebApplication1/Front/Client/menu-voyageurs.html
+++ b/WebApplication1/WebApplication1/Front/Client/menu-voyageurs.html
@@ -74,6 +74,12 @@
                     <div class="panel-footer" style="text-align:center">Rechercher un voyageur</div>
                 </div>
             </div>
+            <div class="col-sm-4" style="margin: 10px">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Client/supprimer-client.html" class="panel-body"><img src="DeleteSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Eliminer un voyageur</div>
+                </div>
+            </div>
         </div>
     </div>
 
