--- a/WebApplication1/WebApplication1/Front/Agence/afficher-agences.html
+++ b/WebApplication1/WebApplication1/Front/Agence/afficher-agences.html
@@ -42,8 +42,10 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/Agence/menu-agences.html">Agences</a></li>
                     <li><a href="http://localhost:63574/Front/Agence/creer-agence.html">Créer</a></li>
-                    <li><a href="http://localhost:63574/Front/Agence/chercher-agence.html">Chercher</a></li>
+                    <li><a href="http://localhost:63574/Front/Agence/chercher-agence.html">Trouver</a></li>
+                    <li><a href="http://localhost:63574/Front/Agence/supprimer-agence.html">Supprimer</a></li>
                 </ul>
+
             </div>
         </div>
     </nav>
