--- a/WebApplication1/WebApplication1/Front/Destination/afficher-destinations.html
+++ b/WebApplication1/WebApplication1/Front/Destination/afficher-destinations.html
@@ -43,6 +43,7 @@
                     <li class="active"><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
                     <li><a href="http://localhost:63574/Front/Destination/creer-destinations.html">Créer</a></li>
                     <li><a href="http://localhost:63574/Front/Destination/chercher-destination.html">Chercher</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/Supprimer-destination.html">Supprimer</a></li>
                 </ul>
             </div>
         </div>
