--- a/WebApplication1/WebApplication1/Front/Destination/menu-destinations.html
+++ b/WebApplication1/WebApplication1/Front/Destination/menu-destinations.html
@@ -8,6 +8,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
+        .navbar {
+            margin-bottom: 50px;
+            border-radius: 0;
+        }
         .jumbotron {
             margin-bottom: 0;
         }
@@ -47,22 +51,28 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4" style="margin: 10px">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Destination/creer-destination.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Créer Destination</div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4" style="margin: 10px">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Destination/afficher-destinations.html" class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Afficher les destinations</div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4" style="margin: 10px">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Destination/chercher-destination.html" class="panel-body"><img src="SearchLogo.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Rechercher une destination</div>
+                </div>
+            </div>
+            <div class="col-sm-4" style="margin: 10px">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Destination/supprimer-destination.html" class="panel-body"><img src="DeleteSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Supprimer une destination</div>
                 </div>
             </div>
         </div>
