--- a/WebApplication1/WebApplication1/Front/Voyage/afficher-voyages.html
+++ b/WebApplication1/WebApplication1/Front/Voyage/afficher-voyages.html
@@ -43,6 +43,7 @@
                     <li class="active"><a href="http://localhost:63574/Front/Voyage/menu-voyages.html">Voyages</a></li>
                     <li><a href="http://localhost:63574/Front/Voyage/creer-voyage.html">Créer</a></li>
                     <li><a href="http://localhost:63574/Front/Voyage/chercher-voyage.html">Chercher</a></li>
+                    <li><a href="http://localhost:63574/Front/Voyage/supprimer-voyage.html">Supprimer</a></li>
                 </ul>
             </div>
         </div>
