--- a/WebApplication1/WebApplication1/Front/Destination/supprimer-destination.html
+++ b/WebApplication1/WebApplication1/Front/Destination/supprimer-destination.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>BoVoyageTrouverDestination</title>
+    <title>BoVoyageSupprimerDestination</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
         <div class="container text-center">
             <h1 style="color: chocolate">BoVoyage</h1>
             <div class="col-md-12">
-                <p style="color: mediumturquoise">Trouver une destination</p>
+                <p style="color: mediumturquoise">Supprimer une destination</p>
             </div>
         </div>
     </div>
@@ -41,9 +41,9 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
-                    <li><a href="http://localhost:63574/Front/Destination/creer-destination.html">Créer</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/creer-destinations.html">Créer</a></li>
                     <li><a href="http://localhost:63574/Front/Destination/afficher-destinations.html">Afficher</a></li>
-                    <li><a href="http://localhost:63574/Front/Destination/Supprimer-destination.html">Supprimer</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/chercher-destination.html">Chercher</a></li>
                 </ul>
             </div>
         </div>
@@ -54,14 +54,14 @@
             <div class="col-md-6">
                 <form class="form-horizontal" role="form">
                     <div class="form-group">
-                        <label class="col-sm-2 control-label" for="inputPays">Pays</label>
+                        <label class="col-sm-5 control-label" for="inputId">ID de la destination à supprimer</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputPays" placeholder="Pays de destination...">
+                            <input type="text" class="form-control" id="inputId" placeholder="ID de la destination">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">Rechercher</button>
+                            <button type="submit" class="btn btn-default">Confirmer</button>
                         </div>
                     </div>
                 </form>
@@ -81,16 +81,28 @@
     <script>
 
         $(document).ready(function () {
-            $("form").submit(function (ev) {
+            $.ajax({
+                url: "http://localhost:63574/api/destinations/",
+                method: 'GET',
+                dataType: 'json',
+                success: function (data) {
+                    let ul = $('#resultat');
+                    for (let item of data) {
+                        ul.append(`<li>Destination ${item.IdDestination} - ${item.Region} ${item.Pays}: ${item.Description}</li>`);
+                    }
+                },
+                error: function (message) {
+                    alert(message);
+                }
+            });
 
+            $("form").submit(function (ev) {
+                
                 $.ajax({
-                    url: "http://localhost:63574/api/destinations/" + $("#inputPays").val(),
-                    method: 'GET',
+                    url: "http://localhost:63574/api/destinations/" + $("#inputId").val(),
+                    method: 'DELETE',
                     success: function (data) {
-                        let ul = $('#resultat');
-                        for (let item of data) {
-                            ul.append(`<li>Destination ${item.IdDestination} - ${item.Region} ${item.Pays}: ${item.Description}</li>`);
-                        }
+                        alert(`Destination ${data.IdDestination} ${data.Pays} ${data.Region} supprimée avec succès`)
                     },
                     error: function (message) {
                         alert(message);
