--- a/WebApplication1/WebApplication1/Front/home.html
+++ b/WebApplication1/WebApplication1/Front/home.html
@@ -28,7 +28,7 @@
     <div class="jumbotron">
         <div class="container text-center">
             <h1 style="color: chocolate">BoVoyage</h1>
-            <p style="color:mediumturquoise">It will take a while mais faites nous confiance.</p>
+            <p style="color:mediumturquoise">Faites nous confiance.</p>
         </div>
     </div>
 
@@ -38,19 +38,19 @@
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Client/menu-voyageurs.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Gestion des Voyageurs</div>
+                    <div class="panel-footer" style="text-align:center; font-size: large">Voyageurs</div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Voyage/menu-voyages.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Gestion des Voyages</div>
+                    <div class="panel-footer" style="text-align:center; font-size: large">Voyages</div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Destination/menu-destinations.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Gestion des Destinations</div>
+                    <div class="panel-footer" style="text-align:center; font-size: large">Destinations</div>
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Dossier/menu-dossiers.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Gestion des Dossiers de reservation</div>
+                    <div class="panel-footer" style="text-align:center; font-size: large">Dossiers de reservation</div>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -73,7 +73,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <a  href="http://localhost:63574/Front/Assurance/menu-assurances.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Gestion des Assurances</div>
+                    <div class="panel-footer" style="text-align:center; font-size: large">Assurances</div>
                 </div>
             </div>
         </div>
