--- a/WebApplication1/WebApplication1/Front/Dossier/creer-dossier.html
+++ b/WebApplication1/WebApplication1/Front/Dossier/creer-dossier.html
@@ -45,9 +45,9 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/menu-dossier.html">Dossier</a></li>
-                    <li><a href="#">Consulter</a></li>
-                    <li><a href="#">Consulter</a></li>
-                    <li><a href="#">Consulter</a></li>
+                    <li><a href="#">Liste</a></li>
+                    <li><a href="#">Creer</a></li>
+                    <li><a href="#">Supprimer</a></li>
                 </ul>
             </div>
         </div>
@@ -59,13 +59,6 @@
                 <label class="col-sm-2 control-label">Client</label>
                 <div class="col-sm-10">
                     <select class="form-control" id="inputIdClient"></select>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Participant</label>
-                <div class="col-sm-10">
-                    <select class="form-control" id="inputIdParticipant"></select>
                 </div>
             </div>
 
@@ -84,29 +77,9 @@
             </div>
 
             <div class="form-group">
-                <label for="EtatDossier">Etat du dossier</label>
-                <select multiple class="form-control" id="inputEtatDossierReservation">
-                    <option>En cours</option>
-                    <option>En attente</option>
-                    <option>Refusée</option>
-                    <option>Acceptée</option>
-                </select>
-            </div>
-
-            <div class="form-group">
                 <label class="col-sm-2 control-label">Numéro Carte Bancaire</label>
                 <div class="col-sm-4">
                     <input type="number" class="form-control" id="inputCb">
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" id="inputAssurance">Assurance
-                        </label>
-                    </div>
                 </div>
             </div>
 
@@ -138,22 +111,14 @@
                 }
             });
 
-            $.get("http://localhost:63574/api/participants/", function (data) {
-                //console.log(data);
-                for (let item of data) {
-                    $("#inputIdParticipant").append(`<option value="${item.IdParticipant}">${item.Nom}</option>`)
-                }
-            });
-
             $("form").submit(function (ev) {
                 let obj = {
                     IdClient: $("#inputIdClient").val(),    
-                    IdVoyage: $("#inputIdVoyage").val(),    
-                    IdParticipant: $("#inputIdParticipant").val(),    
+                    IdVoyage: $("#inputIdVoyage").val(),              
                     NombreParticipant: $("#inputNbParticipant").val(),    
-                    EtatDossierReservation: $("#inputEtatDossierReservation").val(),
+                    //EtatDossierReservation: $("#inputEtatDossierReservation").val(),
                     PrixTotal: $("#inputPrix").val(),
-                    Assurance: $("#inputAssurance").val(),
+                    //Assurance: $("#inputAssurance").val(),
                     NumeroCarteBancaire: $("#inputCb").val(),
                 };
 
@@ -171,7 +136,5 @@
         });
 
     </script>
-
-
 </body>
 </html>
