--- a/WebApplication1/WebApplication1/Front/home.html
+++ b/WebApplication1/WebApplication1/Front/home.html
@@ -67,7 +67,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <a href="http://localhost:63574/Front/Agence/menu-agences.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Gestion des Agences de voyage</div>
+                    <div class="panel-footer" style="text-align:center; font-size: large">Agences de voyage</div>
                 </div>
             </div>
             <div class="col-sm-4">
